--- a/dashboard.html
+++ b/dashboard.html
@@ -15,16 +15,17 @@
 
     <nav class="navbar navbar-expand-lg navbar-light bg-dark fixed-top">
       <div class="container-fluid">
-        <a class="navbar-brand text-white" href="#">ADMIN DASHBOARD</a>
+        <img src="logoh.png" alt="">
+        <a class="navbar-brand text-white" href="#"></a>
           <form class="d-flex">
             <!-- <form class="d-flex ml-auto"> -->
             <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-            <button class="btn btn-outline-success" type="submit">Search</button>
+            <button class="btn btn-outline-success bg-white text-dark" type="submit">Search</button>
           </form>
 
           <div class="icon ml-4">
             <h5>
-              <i class="fas fa-sign-out-alt mr-3" data-toggle="tooltip" title="sign out"></i>
+              <i class="fas fa-sign-out-alt mr-3 bg-white p-2" data-toggle="tooltip" title="sign out"></i>
             </h5>
           </div>
         </div>
@@ -39,11 +40,6 @@
           <li class="nav-item">
             <a class="nav-link active text-white" href="dashboard.html">
               <i class="fas fa-tachometer-alt mr-2"></i>  Dashboard</a>
-            <hr class="bg-secondary">
-          </li>
-          <li class="nav-item">
-            <a class="nav-link text-white" href="statistik.html">
-              <i class="fas fa-chart-line mr-2"></i>  Statistik</a>
             <hr class="bg-secondary">
           </li>
           <li class="nav-item">
