--- a/subscriber.html
+++ b/subscriber.html
@@ -16,7 +16,8 @@
     <!-- fixxx :))))) ntr copas klo udh ada nama web -->
     <nav class="navbar navbar-expand-lg navbar-light bg-dark fixed-top">
       <div class="container-fluid">
-        <a class="navbar-brand text-white" href="#">ADMIN DASHBOARD</a>
+        <img src="logoh.png" alt="">
+        <a class="navbar-brand text-white" href="#"></a>
           <form class="d-flex">
             <!-- <form class="d-flex ml-auto"> -->
             <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
@@ -40,11 +41,6 @@
           <li class="nav-item">
             <a class="nav-link active text-white" href="dashboard.html">
               <i class="fas fa-tachometer-alt mr-2"></i>  Dashboard</a>
-            <hr class="bg-secondary">
-          </li>
-          <li class="nav-item">
-            <a class="nav-link text-white" href="statistik.html">
-              <i class="fas fa-chart-line mr-2"></i>  Statistik</a>
             <hr class="bg-secondary">
           </li>
           <li class="nav-item">
